fix console errors bold headings and spacing

--- a/app/assets/stylesheets/main/feed.css
+++ b/app/assets/stylesheets/main/feed.css
@@ -26,8 +26,8 @@
 
 .portfolio-header {
     margin: 0 0 10px 0;
-    padding: 10px;
-    font-size: 22px;
+    padding: 15px;
+    font-size: 20px;
     border-bottom: lightgray 1px solid;
 }
 
