--- a/app/assets/stylesheets/show/show_body.css
+++ b/app/assets/stylesheets/show/show_body.css
@@ -71,7 +71,7 @@
     font-size: 25px;
     border-bottom: 1px solid lightgray;
     width: 800px; 
-    padding-top: 15px;
+    margin: 50px 0 0 0;
     padding-bottom: 15px;
 }
 
@@ -89,7 +89,7 @@
 
 .show-page-attr-item {
     width: 120px;
-    margin: 30px;
+    margin: 30px 30px 15px 30px;
     font-size: 14px;
 }
 
